[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "BraAndKet"
version = "0.8.3"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "BraAndKet is a library for numeral calculations of discrete quantum systems."
readme = "README.md"

urls.repository = "https://github.com/ZhengKeli/BraAndKet"
authors = [{ name = "Zheng Keli", email = "zhengkeli2009@126.com" }]

requires-python = ">=3.8"
dependencies = ["numpy"]
optional-dependencies.tf = ["tensorflow"]


[tool.setuptools]
package-dir = { "" = "src" }
packages.find.where = ["src"]
