[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "BraAndKet"
version = "0.9.0-dev"
description = "A library for numeral calculations of discrete quantum systems."
authors = ["Keli Zheng <zhengkeli2009@126.com>"]
repository = "https://github.com/ZhengKeli/BraAndKet"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
tensorflow = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
